# gloo

./: .README.tpl  .azure-pipelines.yml  .firebaserc  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT.md  README.md  firebase.json  new-design-workflow.dot  release.toml  update-readmes.sh
.ci/: deploy-book.yml  install-mdbook.yml  install-rust.yml  install-wasm-pack.yml  test-cargo-readme.yml  wasm-pack-test-headless.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  propose_design.md
.github/workflows/: build-website.yml  ci.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  lint-fmt.yml  publish-website.yml  tests.yml
crates/ani-frames/: Cargo.toml
crates/ani-frames/src/: callbacks.rs  lib.rs
crates/ani-frames/tests/: web.rs
crates/console/: Cargo.toml  README.md
crates/console-timer/: Cargo.toml  README.md
crates/console-timer/src/: lib.rs
crates/console-timer/tests/: web.rs
crates/console/src/: console_dbg.rs  counter.rs  dbg.rs  externs.rs  lib.rs  macros.rs  timer.rs
crates/console/tests/: web.rs
crates/dialogs/: Cargo.toml  README.md
crates/dialogs/src/: lib.rs
crates/events/: Cargo.toml  README.md
crates/events/src/: lib.rs
crates/events/tests/: web.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: callback.rs  headers.rs  lib.rs
crates/file/: Cargo.toml  README.md
crates/file/src/: blob.rs  file.rs  file_list.rs  file_reader.rs  lib.rs  object_url.rs  sync_file_reader.rs
crates/file/tests/: web.rs
crates/history/: Cargo.toml  README.md
crates/history/src/: any.rs  browser.rs  error.rs  hash.rs  history.rs  lib.rs  listener.rs  location.rs  memory.rs  query.rs  state.rs  utils.rs
crates/history/tests/: browser_history.rs  browser_history_feat_serialize.rs  hash_history.rs  hash_history_feat_serialize.rs  memory_history.rs  memory_history_feat_serialize.rs  query.rs  utils.rs
crates/intl/: Cargo.toml  README.md
crates/intl/src/: date_time_format.rs  lib.rs  number_format.rs  utils.rs
crates/net/: Cargo.toml  README.md
crates/net/src/: error.rs  http.rs  lib.rs
crates/net/src/eventsource/: futures.rs  mod.rs
crates/net/src/http/: headers.rs  method.rs  mod.rs  query.rs  request.rs  response.rs
crates/net/src/websocket/: events.rs  futures.rs  io_util.rs  mod.rs
crates/net/tests/: headers.rs  http.rs  query.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: builder.rs  future.rs  lib.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: errors.rs  indexed_db.rs  indexeddb.rs  json_storage.rs  lib.rs  local_storage.rs  macros.rs  session_storage.rs
crates/storage/src/indexed_db/: cursor.rs  errors.rs  index.rs  key.rs  mod.rs  object_store.rs  request.rs  transaction.rs  util.rs
crates/storage/tests/: indexed_db.rs  local_storage.rs  session_storage.rs  web.rs
crates/timers/: Cargo.toml  README.md
crates/timers/src/: callback.rs  future.rs  lib.rs
crates/timers/tests/: node.rs  web.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: errors.rs  iter.rs  json.rs  lib.rs
crates/utils/src/format/: json.rs
crates/utils/tests/: serde.js  serde.rs
crates/webextensions/: Cargo.toml
crates/webextensions/src/: callbacks.rs  lib.rs
crates/worker/: Cargo.toml
crates/worker-macros/: Cargo.toml  README.md
crates/worker-macros/src/: lib.rs  oneshot.rs  reactor.rs  worker_fn.rs
crates/worker-macros/tests/: oneshot.rs  reactor.rs
crates/worker-macros/tests/oneshot/: basic-pass.rs  many_input-fail.rs  many_input-fail.stderr  no_async-fail.rs  no_async-fail.stderr  no_input-fail.rs  no_input-fail.stderr  sync-pass.rs
crates/worker-macros/tests/reactor/: basic-pass.rs  many_input-fail.rs  many_input-fail.stderr  return_type-fail.rs  return_type-fail.stderr  sync-fail.rs  sync-fail.stderr
crates/worker/src/: bridge.rs  codec.rs  handler_id.rs  lib.rs  lifecycle.rs  link.rs  messages.rs  native_worker.rs  pool.rs  registrar.rs  scope.rs  spawner.rs  traits.rs  worker_ext.rs
crates/worker/src/actor/: bridge.rs  lifecycle.rs  mod.rs  native_worker.rs  registrar.rs  scope.rs  spawner.rs  traits.rs
crates/worker/src/oneshot/: bridge.rs  mod.rs  registrar.rs  spawner.rs  traits.rs  worker.rs
crates/worker/src/reactor/: bridge.rs  mod.rs  receiver.rs  registrar.rs  scope.rs  source.rs  spawner.rs  traits.rs  worker.rs
crates/worker/src/worker/: mod.rs  private.rs  public.rs  queue.rs
crates/xhr/: Cargo.toml
crates/xhr/src/: lib.rs
crates/xhr/tests/: mock.js  web.rs
examples/clock/: Cargo.toml  README.md  index.html
examples/clock/src/: lib.rs
examples/file-hash/: Cargo.toml  README.md  index.html
examples/file-hash/src/: codec.rs  lib.rs
examples/history-wasi/: Cargo.toml  README.md
examples/markdown/: Cargo.toml  README.md  index.html
examples/markdown/src/: lib.rs
examples/prime/: Cargo.toml  index.html
examples/prime/src/: lib.rs
examples/storage/: Cargo.toml  index.html
examples/storage/src/: lib.rs
examples/todomvc/: Cargo.toml  README.md  index.html
examples/todomvc/src/: app.rs  lib.rs  macros.rs  todo.rs  util.rs
examples/webextension/: Cargo.toml  index.html  index.js  manifest.json  package-lock.json  package.json
examples/webextension/src/: lib.rs
guide/: book.toml
guide/src/: SUMMARY.md  console-timer.md  introduction.md  timers.md  using-gloo.md
guide/src/crates/: events.md  (+3 more)
rfcs/: 000-websocket-api.md  001-mid-level-file-api.md  002-mid-level-raf-api.md  003-add-filereadersync.md  003-utility-crate.md  webgl.md
src/: error.rs  http.rs  lib.rs  websocket.rs
src/websocket/: events.rs  futures.rs  mod.rs
tests/: http.rs  websocket.rs
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  tsconfig.json
website/blog/: 2019-05-29-hello-world.md  2021-07-27-new-release.md  2021-10-10-new-release.md  2022-1-22-new-release.md  2022-3-11-new-net-crate.md
website/docs/: getting-started.mdx
(+14 files in other folders)
