[package]
authors = ["Rust and WebAssembly Working Group"]
description = "A modular toolkit for Rust and WebAssembly"
edition = "2018"
license = "MIT/Apache-2.0"
name = "gloo"
readme = "README.md"
version = "0.8.0"
repository = "https://github.com/rustwasm/gloo"
homepage = "https://gloo-rs.web.app/"
documentation = "https://docs.rs/gloo/"
categories = ["api-bindings", "wasm"]

[dependencies]
gloo-timers = { version = "0.2", path = "crates/timers" }
gloo-events = { version = "0.1", path = "crates/events" }
gloo-file = { version = "0.2", path = "crates/file" }
gloo-dialogs = { version = "0.1", path = "crates/dialogs" }
gloo-storage = { version = "0.2", path = "crates/storage" }
gloo-render = { version = "0.1", path = "crates/render" }
gloo-console = { version = "0.2", path = "crates/console" }
gloo-utils = { version = "0.1", path = "crates/utils" }
gloo-history = { version = "0.1", path = "crates/history" }
gloo-worker = { version = "0.2", path = "crates/worker" }
gloo-net = { version = "0.2", path = "crates/net" }

[features]
default = []
futures = ["gloo-timers/futures", "gloo-file/futures"]

[package.metadata.docs.rs]
features = ["futures"]

[workspace]
members = [
    "crates/timers",
    "crates/events",
    "crates/net",
    "crates/file",
    "crates/dialogs",
    "crates/storage",
    "crates/console",
    "crates/utils",
    "crates/history",
    "crates/worker",
    "crates/net",

    "examples/markdown",
    "examples/clock",
]
