[package]
name = "gloo-ani-frames"
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.40"
js-sys = "0.3.17"

[dependencies.web-sys]
version = "0.3.17"
features = [
    "console",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.40"
futures = "0.1.25"