[package]
name = "gloo-console-timer"
description = "Convenience crate for working with JavaScript timers"
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/console-timer"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "development-tools::profiling", "wasm"]

[dependencies.web-sys]
version = "0.3.31"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.4"
gloo-timers = { version = "0.2.0", path = "../timers" }
