[package]
name = "gloo-console"
description = "Convenience crate for working with browser's console"
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/console"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "development-tools::profiling", "wasm"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.4"
gloo-timers = { version = "0.2.0", path = "../timers" }
