[package]
name = "gloo-events"
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.37"

[dependencies.web-sys]
version = "0.3.14"
features = [
    "Event",
    "EventTarget",
    "AddEventListenerOptions",
]

[dev-dependencies]
js-sys = "0.3.14"
futures = "0.1.25"
wasm-bindgen-test = "0.2.37"

[dev-dependencies.web-sys]
features = [
    "HtmlElement",
    "Window",
    "Document",
    "Element",
    "MouseEvent",
    "ProgressEvent",
]
