[package]
name = "gloo-events"
description = "Convenience crate for working with DOM event listeners"
version = "0.1.2"
authors = ["Rust and WebAssembly Working Group"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/events"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "asynchronous", "web-programming", "wasm"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.31"
features = [
    "Event",
    "EventTarget",
    "AddEventListenerOptions",
]

[dev-dependencies]
js-sys = "0.3.31"
futures = "0.3"
wasm-bindgen-test = "0.3.4"

[dev-dependencies.web-sys]
version = "0.3.31"
features = [
    "HtmlElement",
    "Window",
    "Document",
    "Element",
    "MouseEvent",
    "ProgressEvent",
]
