[package]
name = "gloo-fetch"
description = ""
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/events"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "asynchronous", "web-programming", "wasm"]

[dependencies]
http = "0.2.6"
wasm-bindgen = "0.2.55"
wasm-bindgen-test = "0.3.5"

[dependencies.web-sys]
version = "0.3.32"
features = [
    "Headers",
    "Request",
    "Window",
    "RequestInit",
    "RequestMode",
    "RequestCache",
    "RequestCredentials",
    "RequestRedirect",
    "ReferrerPolicy",
]
