[package]
name = "gloo-fetch"
description = ""
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/events"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "asynchronous", "web-programming", "wasm"]

[features]
default = ["futures"]
futures = ["wasm-bindgen-futures"]

[dependencies]
http = { version = "0.2.6", optional = true }
js-sys = "0.3"
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3.32"
features = [
    "FormData",
    "Headers",
    "ReadableStream",
    "ReferrerPolicy",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCache",
    "RequestCredentials",
    "RequestRedirect",
    "Response",
    "ResponseType",
    "Window",
]
