[package]
name = "gloo-history"
version = "0.2.0"
description = "Universal Session History"
authors = ["Rust and WebAssembly Working Group"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/history"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "history", "wasm"]
rust-version = "1.64"

[dependencies]
wasm-bindgen = "0.2"
gloo-utils = { version = "0.2.0", path = "../utils" }
gloo-events = { version = "0.2.0", path = "../events" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_urlencoded = { version = "0.7", optional = true }
thiserror = { version = "1.0", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["History", "Window", "Location", "Url"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"], path = "../timers" }

[features]
query = ["thiserror", "serde_urlencoded"]
default = ["query"]
