[package]
name = "gloo-intl"
version = "0.1.0"
authors = [
    "Rust and WebAssembly Working Group",
    # "Mendy Berger",
]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustwasm/gloo"
description = "Clean Intl API for WASM Apps"
readme = "README.md"
keywords = ["intl", "i18l", "Internationalization", "localization"]
categories = ["wasm", "api-bindings"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
