[package]
name = "gloo-timers"
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.37"
js-sys = "0.3.14"

[dependencies.futures_rs]
package = "futures"
version = "0.1.25"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.3.14"
optional = true

[dependencies.web-sys]
version = "0.3.14"
features = [
    "Window",
]

[features]
default = []
futures = ["futures_rs", "wasm-bindgen-futures"]


[dev-dependencies]
wasm-bindgen-test = "0.2.37"
