[package]
name = "gloo-utils"
version = "0.1.1"
edition = "2018"
description = "Convenience crate for common `web_sys` features"
authors = ["Rust and WebAssembly Working Group"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/utils"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "wasm"]


[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "History",
    "HtmlElement",
    "Location",
    "Window"
]
