[package]
name = "gloo-utils"
version = "0.1.7"
edition = "2018"
description = "Convenience crate for common `web_sys` features"
authors = ["Rust and WebAssembly Working Group"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/utils"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "wasm"]


[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde =  { version = "1.0", optional = true }
serde_json = {version = "1.0", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "History",
    "HtmlElement",
    "Location",
    "Window",
    "HtmlHeadElement",
    "Element",
]

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_derive = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
