[package]
name = "gloo-xhr"
version = "0.1.0"
authors = ["The Rust and WebAssembly Working Group"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.37"
js-sys = "0.3.14"
http = "0.1.16"
futures = "0.1.25"
gloo-events = { git = "https://github.com/Pauan/gloo", branch = "events" }

[dependencies.web-sys]
version = "0.3.14"
features = [
    "Blob",
    "Document",
    "Event",
    "EventTarget",
    "File",
    "FormData",
    "ProgressEvent",
    "XmlHttpRequest",
    "XmlHttpRequestEventTarget",
    "XmlHttpRequestUpload",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.37"
