[package]
name = "example-clock"
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2021"
publish = false
rust-version = "1.64"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = { path = "../..", features = ["futures"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
futures-util = "0.3"
chrono = { version = "0.4.37", features = ["wasmbind"] }
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.69"
features = ["console", "Window", "Document", "Element", "Node"]
