[package]
name = "example-markdown"
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.9.1", default-features = false }
gloo = { path = "../.." }

console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4" }
js-sys = "0.3"
